Change language to "id". fix text wrap

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ color: var(--textColor);
 text-align: center;
 font-size: 1.1rem;
 line-height: 1.5rem;
+white-space: nowrap;
 }
 
 .logo {
@@ -265,6 +266,7 @@ box-shadow: var(--shadow-md);
 .footer p, .footer a {
   color: var(--buttonTextColor);
   font-size: 0.8rem;
+  word-break: break-all;
 }
 
 .space {
